Added Next and Previous Butotn as well as change to color pallete

--- a/view/index.html
+++ b/view/index.html
@@ -10,17 +10,17 @@
 <body>
     
     <div class="container">
-        <div class="row">
+        <div class="row header">
             <lable class="label">Dictionary</lable>
             <input type="text" id="term-input" name="term-input" placeholder="Search Term">
             <button id="search-btn" class="button-27">Look Up</button>
         </div>
-        <div class="row">
+        <div class="row body">
             <div id="output"></div>
         </div>
-        <div class="row">
-            <button id="next-btn">Next</button>
-            <button id="previous-btn">Previous</button>
+        <div class="row footer">
+            <button id="previous-btn" class="button-27">Previous</button>
+            <button id="next-btn" class="button-27">Next</button>
         </div>
     </div>
 
