--- a/view/style.css
+++ b/view/style.css
@@ -1,23 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     font-family: 'Poppins', sans-serif;
+    background-color: #212A3E;
+    color: #DDE6ED;
 }
 
-.row{
+.row {
     display: flex;
     gap: 2rem;
     padding: 1rem;
     width: 100%;
 }
 
-#output{
+#output {
     width: 100%;
     padding: 1rem;
     display: flex;
@@ -25,9 +27,8 @@ body{
     flex: 4;
 }
 
-.card{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    /* border: 1px solid black; */
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     margin: 1rem;
     padding: 1rem;
     border-radius: 1rem;
@@ -35,90 +36,117 @@ body{
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    background-color: #F1F6F9;
+    color: #212A3E;
+
 }
 
-.card div{
+.card div {
     display: inline-block;
 }
 
-.card-title{
+.card-title {
     font-size: 1.5rem;
     font-weight: bold;
+    text-align: center;
+    text-decoration: underline;
+    text-transform: capitalize;
 }
 
-.card-sub-title{
+.card-sub-title {
     font-size: 1rem;
     font-style: italic;
 }
 
+.card-body{
+    font-size: 1.1rem;
+    text-align: justify;
+}
 
-.label{
+.label {
     font-size: 1.7rem;
     font-weight: bold;
 }
 
-#term-input{
+#term-input {
     text-align: center;
     font-size: 1rem;
     outline: none;
     border-radius: 1rem;
     border: 1px solid black;
+    width: 30%;
 }
 
-#search-btn{
+#search-btn {
     /* padding: 0 1rem; */
     font-size: 1rem;
     font-weight: bold;
 }
 
-button.primary{
-    background-color: #4CAF50; /* Green */
+button.primary {
+    background-color: #4CAF50;
+    /* Green */
     border: 0.3rem solid #4CAF50;
     color: white;
 }
 
-button.primary:hover{
-    background-color: white; /* Green */
+button.primary:hover {
+    background-color: white;
+    /* Green */
     color: #4CAF50;
     transition: 0.3s;
 }
 
 .button-27 {
-  appearance: none;
-  background-color: #000000;
-  border: 2px solid #1A1A1A;
-  border-radius: 15px;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  cursor: pointer;
-  display: inline-block;
-  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  font-size: 16px;
-  font-weight: 600;
-  line-height: normal;
-  margin: 0;
-  min-width: 0;
-  outline: none;
-  padding: 0 24px;
-  text-align: center;
-  text-decoration: none;
-  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  will-change: transform;
+    appearance: none;
+    background-color: #526D82;
+    border: 2px solid #1A1A1A;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    min-width: 0;
+    outline: none;
+    padding: 0 24px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    will-change: transform;
 }
 
 .button-27:disabled {
-  pointer-events: none;
+    pointer-events: none;
 }
 
 .button-27:hover {
-  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-  transform: translateY(-2px);
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
 }
 
 .button-27:active {
-  box-shadow: none;
-  transform: translateY(0);
+    box-shadow: none;
+    transform: translateY(0);
+}
+
+.header{
+    justify-content: center;
+}
+
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer button{
+    height: 3rem;
 }
