Added loading to HTML

--- a/view/index.html
+++ b/view/index.html
@@ -17,6 +17,13 @@
             <button id="search-btn" class="button-27">Look Up</button>
         </div>
         <div class="row body">
+            <div id="loading">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+           </div>
             <div id="output"></div>
         </div>
         <div class="row footer">
