--- a/view/style.css
+++ b/view/style.css
@@ -162,3 +162,42 @@ button.primary:hover {
     height: 3rem;
     
 }
+
+#loading {
+    position: relative;
+    width: 100%;
+    display: flex;
+    overflow: hidden;
+    padding: 40px;
+    border: 1px solid white;
+}
+.dot {
+    position: absolute;
+    left: 0;
+    width: 15px;
+    height: 15px;
+    background-color: white;
+    filter: drop-shadow(0 0 10px white);
+    border-radius: 50%;
+    animation: notleft 3s ease infinite;
+}
+.dot:nth-child(2) {
+    animation-delay: .4s;
+}
+.dot:nth-child(3) {
+    animation-delay: .5s;
+}
+.dot:nth-child(4) {
+    animation-delay: .6s;
+}
+.dot:nth-child(5) {
+    animation-delay: .7s;
+}
+@keyframes notleft{
+    50% {
+        left: 50%;
+    }
+    100% {
+        left: 120%;
+    }
+}
